--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 GESTIÓN DE EXAMENES
 
 1)  Asignación de preguntas por  tema a los exmenes --> COMPLETADO
-2)  Editar examen, falta ponerle la opción para que elimine una pregunta determinada --> PENDIENTE
-2)  Errores: al seleccionar un examen autmaticamente muestra una alerta de que "no hay preguntas disponibles
-    para el tema", no afecta el funcionamiento pero falta corregirlo --> PENDIENTE
+2)  Editar examen, falta ponerle la opción para que quite una pregunta determinada --> PENDIENTE
+2)  Errores: al seleccionar un examen autmaticamente muestra una alerta de que "no hay preguntas disponibles"
+    para el tema", no afecta el funcionamiento pero falta corregirlo --> SOLUCIONADO
 3)  Crear preguntas por tema --> COMPLETADO
 4)  Al crear la pregunta la está guardando con el tema de Ciberseguridad autmomaticamente,
-    falta corregir eso --> EN PROCESO
+    falta corregir eso --> PENDIENTE
 5)  Eliminar el uso del idBanco, eliminar la tabla BANCO --> PENDIENTE
